# rust-prec

./: .gitignore  Cargo.toml  README.md  config.toml  install.sh
.github/workflows/: CI.yml
src/: error.rs  keyboard.rs  launch_options.rs  main.rs  screenshot.rs  throttle.rs  watcher.rs
src/highlights/: bookmark.rs  demo.rs  killstreak.rs  mod.rs  player.rs
