[package]
name = "rust-prec"
version = "1.0.4"
edition = "2021"
authors = ["Daniel Ainshtein <ddeityy@gmail.com>"]
description = "P-REC-like program for linux users. Runs in the background and records demos."
license-file = "LICENSE"
repository = "https://github.com/Ddeityy/rust-prec"
keywords = ["linux", "prec", "p-rec", "TF2", "demo"]
include = ["**/*.rs", "Cargo.toml", "target/release/install.sh"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcon = { version = "0.6.0", features = ["rt-tokio"], default-features = false }
async-log-watcher = "0.0.1"
steamlocate = "1.2.1"
log = "0.4.20"
tokio = { version = "1.34.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
env_logger = "0.10.1"
debounce = "0.2.2"
futures-channel = "0.3.29"
