[package]
name = "rust-prec"
version = "1.2.0"
edition = "2021"
authors = ["Daniel Ainshtein <ddeityy@gmail.com>"]
description = "P-REC-like program for linux users. Runs in the background and records demos."
license-file = "LICENSE"
repository = "https://github.com/Ddeityy/rust-prec"
keywords = ["linux", "prec", "p-rec", "TF2", "demo"]
include = ["**/*.rs", "Cargo.toml", "target/release/install.sh"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "highlights"
path = "src/highlights/mod.rs"

[dependencies]
rcon = { version = "0.6.0", features = ["rt-tokio"], default-features = false }
steamlocate = { version = "2.0.0-beta.2" }
log = "0.4.21"
tokio = { version = "1.37.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
env_logger = "0.11.3"
futures-channel = "0.3.30"
futures = { version = "0.3.30" }
steamid-ng = "1.0.0"
keyvalues-parser = "0.2.0"
bitbuffer = "0.11.0"
thiserror = "1.0.61"
tf-demo-parser = "0.5.1"
chrono = "0.4.38"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-ar"
